# ServerCore

./: .gitignore  .travis.yml  CMakeLists.txt  CMakeSettings.json  README.md  appveyor.yml  azure-pipelines.yml  build.sh  global.h  tests.sc  tests.starcore  todo.md
.github/workflows/: ccpp.yml
ServerCore/: CMakeLists.txt  ServerCore.cpp  ServerCore.h  basic_types.cpp  basic_types.h  cmder.cpp  cmder.h  cmder_conf.cpp  cmder_conf.h  configmgr.cpp  configmgr.h  database.cpp  database.h  file.cpp  file.h  global.h  libraryloader.cpp  libraryloader.h  log.cpp  log.h  server.h  translates_CN.h  translates_EN.h
core/: CMakeLists.txt  ast.cpp  ast.h  basic_types.cpp  basic_types.h  cmder.cpp  cmder.h  cmder_conf.cpp  configs.h  core.h  database.cpp  database.h  domain.cpp  domain.h  exception.cpp  exception.h  file.cpp  file.h  function.cpp  function.h  ir.h  libraryloader.cpp  libraryloader.h  log.cpp  log.h  main.cpp  root.cpp  root.h  tools.cpp  tools.h  translates_CN.h  translates_EN.h  variable.cpp  variable.h
core/builtin/: _string.cpp  _string.h  bool.cpp  bool.h  builtin.cpp  builtin.h  char.cpp  char.h  int.cpp  int.h  s_iostream.cpp  s_iostream.h  void.cpp  void.h
doc/: 0-introduce.md  1-standard.md  2-variable.md  README.md  grammar.md  introduce.md  principle.md  standard.md
doc/principle/: README.md  ast.md  domain.md  root_class.md  variable.md
doc/tutorial/: README.md  grammar.md  variable.md
examples/: basic-io.sc  basic-io.starcore  helloworld.sc  helloworld.starcore  if.sc  if.starcore  login.sc  login.starcore  while.starcore
