cmake_minimum_required (VERSION 3.8)

aux_source_directory(. src)
add_executable (ServerCore ${src})
set_target_properties(ServerCore PROPERTIES DEBUG_POSTFIX "d") 
set_target_properties(ServerCore PROPERTIES OUTPUT_NAME "ServerCore.${FILENAME_SUFFIX}")
if (UNIX)
	TARGET_LINK_LIBRARIES(ServerCore dl)
endif()
link_directories(${OUTDIR})
